--- a/client/src/pages/Street.css
+++ b/client/src/pages/Street.css
@@ -20,6 +20,7 @@
     align-items: center;
     background-color: #ffffff;
     border-radius: 10px;
+    margin-top: 120px;
   }
 
   /* #e0dfdf */
